Fix layout bug

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -100,8 +100,13 @@ main {
   width: 70ch;
 }
 
+@supports(hyphens: auto) {
+  .flow > p {
+    hyphens: auto;
+    text-align: justify;
+  }
+}
+
 .flow > * {
-  hyphens: auto;
   margin-top: 0.5em;
-  text-align: justify;
 }
